gcc-14.2.0/gcc/testsuite/gdc.test/runnable/interface2.d
version https://git-lfs.github.com/spec/v1
oid sha256:0e3eae4e52007e948ed7d7852fa2e83657dbbdedf2fa7b1403f5dc23963373ff
size 18967
