gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20515.d
version https://git-lfs.github.com/spec/v1
oid sha256:ae649a913c1fc6c6f9f95a720545d8bd1995c33c57fdeb2034e756912fe2c6ae
size 296
